fix nav links on mobile

--- a/site/assets/styles.css
+++ b/site/assets/styles.css
@@ -76,7 +76,7 @@ header {
   font-size: 20px;
   gap: 10px;
   justify-content: space-between;
-  margin: 0 0 25px;
+  margin: 0;
 }
 
 .home-link {
@@ -102,6 +102,10 @@ nav ul li {
 }
 nav ul li a {
   padding: 0.5rem;
+}
+
+main {
+  margin-top: 25px;
 }
 
 footer {
@@ -156,12 +160,7 @@ footer p {
   }
 
   header {
-    align-items: center;
-    display: flex;
     flex-direction: column;
-    font-size: 20px;
-    gap: 10px;
     justify-content: center;
-    margin: 0;
   }
 }
